[gd_scene load_steps=28 format=4 uid="uid://ldsvjji42wx1"]

[ext_resource type="Script" path="res://scripts/enemies/cloud/enemy_cloud.gd" id="1_suw4d"]
[ext_resource type="AudioStream" uid="uid://b8gxuwdaxjhp2" path="res://audio/sfx/thunder.ogg" id="2_3y5jy"]
[ext_resource type="Texture2D" uid="uid://b52ckl80sub50" path="res://img/lightning.png" id="2_clo1p"]
[ext_resource type="Texture2D" uid="uid://fdfrm3kaw8ew" path="res://img/cloud.png" id="2_uh8ia"]
[ext_resource type="AudioStream" uid="uid://dp7cowcexwv63" path="res://audio/sfx/charge.ogg" id="3_8b5tv"]
[ext_resource type="Material" uid="uid://cuyghc2qtqjes" path="res://resources/materials/pain_shader_material.tres" id="3_uo1hx"]
[ext_resource type="AudioStream" uid="uid://345nc4dly5b6" path="res://audio/sfx/ghost/ghost_death.ogg" id="4_1kjau"]
[ext_resource type="Material" uid="uid://ncln3pm11vom" path="res://resources/materials/enemies/cloud_eye.tres" id="4_tgjtr"]
[ext_resource type="AudioStream" uid="uid://bkcfdd4neh1so" path="res://audio/sfx/ghost/ghost_damage.ogg" id="5_l7gh6"]
[ext_resource type="PackedScene" uid="uid://brkkjwdov6dww" path="res://scenes/state_machine/state_machine.tscn" id="5_tqel5"]
[ext_resource type="Texture2D" uid="uid://c1tngxnerg4kp" path="res://resources/particles/enemy_particle_alpha_curve.tres" id="6_dq747"]
[ext_resource type="Script" path="res://scripts/enemies/cloud/chase.gd" id="7_05cja"]
[ext_resource type="Script" path="res://scripts/enemies/cloud/idle.gd" id="7_x687j"]
[ext_resource type="Script" path="res://scripts/enemies/cloud/attack.gd" id="8_fqofo"]
[ext_resource type="Script" path="res://scripts/enemies/cloud/pain.gd" id="8_jd6px"]
[ext_resource type="Script" path="res://scripts/enemies/cloud/die.gd" id="8_nmhom"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_650k0"]
resource_local_to_scene = true
emission_shape_scale = Vector3(1, 0.25, 1)
emission_shape = 1
emission_sphere_radius = 0.5
gravity = Vector3(0, 0, 0)
alpha_curve = ExtResource("6_dq747")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v1gjh"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.91664, 0.91664, 0.91664, 0.737255)
albedo_texture = ExtResource("2_uh8ia")
texture_filter = 0
billboard_mode = 1

[sub_resource type="QuadMesh" id="QuadMesh_y807p"]
material = SubResource("StandardMaterial3D_v1gjh")
size = Vector2(3, 3)

[sub_resource type="ArrayMesh" id="ArrayMesh_o6xkx"]
_surfaces = [{
"aabb": AABB(-0.5, -0.5, -0.5, 1, 1, 1),
"format": 34896613377,
"index_count": 144,
"index_data": PackedByteArray("DAADAAUADAAGAAMABAAGAAwABAACAAYAAgANAAYAAgAHAA0ABgAIAAMABgANAAgADQABAAgADQAJAAEABwAJAA0ABwAAAAkAAAAOAAkAAAAKAA4ACQALAAEACQAOAAsABAAHAAIABAAPAAcADwAAAAcADwAKAAAAAwAQAAUAAwAIABAACAALABAACAABAAsADAAUABUADAAFABQABAAVABMABAAMABUAEwAZABYAEwAVABkAFQAXABkAFQAUABcAGQASABgAGQAXABIAFgAYABEAFgAZABgAEQAOAAoAEQAYAA4AGAALAA4AGAASAAsABAAWAA8ABAATABYADwARAAoADwAWABEAFAAQABcAFAAFABAAFwALABIAFwAQAAsA"),
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 26,
"vertex_data": PackedByteArray("O8zDMzvMAAA7zDvMO8wAADvMwzPDMwAAO8w7zMMzAAD/fw4jDiMAAP9/8NwOIwAA8Nz/fw4jAADw3A4j/38AAPDc8Nz/fwAA8Nz/f/DcAAD/fw4j8NwAAP9/8Nzw3AAA/3//fwAAAAD///9//38AAP9//3///wAA/38AAP9/AAD/f////38AAMMzwzM7zAAAwzM7zDvMAADDM8MzwzMAAMMzO8zDMwAADiP/fw4jAAAOIw4j/38AAA4j8Nz/fwAADiP/f/DcAAAAAP9//38AAA==")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_eqfvy"]
resource_name = "cloud_enemy_eye_Cube_001"
_surfaces = [{
"aabb": AABB(-0.5, -0.5, -0.5, 1, 1, 1),
"attribute_data": PackedByteArray("4zl3yd5LerhYSXrH4zl3yd5LerhYSXrHysfQyby2DrYvuJ3GysfQyby2DrYvuJ3Gfv8ivZ7CiYF+/yK9nsKJgX7/Ir2ewomBfv8ivZ7CiYHUwHb/1MB2/9TB9v3Uwfb9sYDVvbGA1b2xgNW9sYDVvbGA1b2xgNW9sYDVvbGA1b2RQPj+kUD4/pFA+P6RQPj+uQGCvJ89jIS5AYK8nz2MhLkBgryfPYyEuQGCvJ89jIR+/3b/fv92/37/dv9+/3b/MoF3/jKBd/4ygXf+MoF3/rkB+P65Afj+uQH4/rkB+P6xgAuDsYALg7GAC4OxgAuDsYALg7GAC4OxgAuDsYALg+M5d8neS3q4WEl6x+M5d8neS3q4WEl6x8rH0Mm8tg62L7idxsrH0Mm8tg62L7idxtTAdv/UwHb/1MH2/dTB9v2xgNW9sYDVvbGA1b2xgNW9sYDVvbGA1b2xgNW9sYDVvZFA+P6RQPj+kUD4/pFA+P4ygXf+MoF3/jKBd/4ygXf+"),
"format": 34896613399,
"index_count": 144,
"index_data": PackedByteArray("LAAJABAALAAUAAkADAAVAC0ADAAGABUACAAzABcACAAbADMAFgAfAAsAFgAxAB8AMAAFAB4AMAAiAAUAGgAjADIAGgACACMAAAA1ACEAAAAkADUAIAAoAAMAIAA0ACgADQAZAAcADQA5ABkAOAABABgAOAAlAAEACgA9ABEACgAdAD0AHAApADwAHAAEACkALgBJAEwALgASAEkADgBNAEYADgAvAE0ASABfAFMASABPAF8ATgBXAF0ATgBLAFcAXABFAFoAXABWAEUAUgBbAEIAUgBeAFsAQAA3ACYAQABZADcAWAAqADYAWABDACoADwBRADsADwBHAFEAOgBBACcAOgBQAEEASgA/AFUASgATAD8AVAArAEQAVAA+ACsA"),
"name": "Material.002",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 96,
"vertex_data": PackedByteArray("O8zDMzvMl207zMMzO8x2OTvMwzM7zIhLO8w7zDvMZZI7zDvMO8zLxDvMO8w7zB20O8zDM8MzLw07zMMzwzPmKDvMwzPDMyUyO8w7zMMzx/I7zDvMwzP81TvMO8zDM5XN/38OIw4jNw3/fw4jDiMIKv9/DiMOI4nz/38OIw4jSeX/f/DcDiPM8v9/8NwOIznV/3/w3A4jegz/f/DcDiOlGfDc/38OI8Hy8Nz/fw4jNw3w3P9/DiPYzfDc/38OI/Ax8NwOI/9/2Trw3A4j/38IKvDcDiP/f+BL8NwOI/9/VjLw3PDc/3+VxvDc8Nz/f8bW8Nzw3P9/WbTw3PDc/3/YzfDc/3/w3GeS8Nz/f/Dclm3w3P9/8Nzps/Dc/3/w3OBL/38OI/DcmG3/fw4j8NwMOP9/DiPw3Jv9/38OI/DcVNX/f/Dc8Nxnkv9/8Nzw3JXG/3/w3PDcbAL/f/Dc8NwYKf9//38AAMfy/3//fwAAPQ3/f/9/AAB1DP9//38AAI/z////f/9/HbT///9//38Nzv///3//fxVM////f/9/JTL/f/9///9okv9//3///5dt/3//f///dgL/f/9///+R/f9/AAD/f3Y5/38AAP9/zir/fwAA/3/11v9/AAD/f2bm/3////9/4sf/f////3/81f9/////f5cq/3////9/vhrDM8MzO8yR/cMzwzM7zPXWwzPDMzvMi/bDMzvMO8xdAsMzO8w7zPcmwzM7zDvM3wfDM8MzwzOA88MzwzPDM77jwzPDM8MzcfbDMzvMwzN1DMMzO8zDM74awzM7zMMzaQgOI/9/DiNvDA4j/38OI4nzDiP/fw4jiwkOI/9/DiOj9Q4jDiP/f5nYDiMOI/9/SeUOIw4j/38c+A4jDiP/f0D3DiPw3P9/GCkOI/Dc/3/UGw4j8Nz/f/QIDiPw3P9/iwkOI/9/8NxsAg4j/3/w3Ij9DiP/f/DcyQYOI/9/8Nwc+AAA/3//f98HAAD/f/9/WAoAAP9//385+QAA/3//f3H2VEfCQyFfUFDWbp4jrMPUONHQ8yIdo5ITG33WE5ZWBkcfc4gbCZQrAxnIxysgnD4P13wHFClUIEjgFN18AU7HWOmT/wLgyIAtBP1Ga9DXrDAplFgD13wHFIib4wzQdBsbe123UClUIEhybB4jcHH0G0zQziBTxxMqdaPpEYib4wzAw604bkfPQ8OiQhVybB4jO0e1Q8Bg60/xb+FwZFSoY8DDrThM0M4g4vAPEN7iWSoJlCsDp3wqFNn8GmsQFa58HaOSExybNQu2asIiH3OIG8/DkDhUR8JD5PAREO9v43AhX1BQalLqSLFV12JjT8RX789RHxnIxyue44srztgJMu9v43CxVddiIU68dt/wDRDW4bUoovUtMZ4UIH0GTDlavzofd9n8GmvO2AkymPUiRK7872rgFN18HPc9RfA5O3j3VgtiAU7HWNBOpHWLOwl23uJZKtHZazNi9qYxHPc9ReLwDxDtb+Vw4/S2MNBOpHWi9S0xNvgLRktP4XS/Oh93")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_o6xkx")

[sub_resource type="SphereShape3D" id="SphereShape3D_atoy3"]
radius = 0.6

[sub_resource type="Animation" id="Animation_npal8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("eye:instance_shader_parameters/alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("eye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:material_alpha")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:particle_alpha")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("eye:instance_shader_parameters/color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 0, 0)]
}

[sub_resource type="Animation" id="Animation_f880t"]
resource_name = "attack"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("eye:instance_shader_parameters/alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("eye:instance_shader_parameters/color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ne44q"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material_alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("eye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.108333, 0.233333, 0.375, 0.533333, 0.658333, 0.8, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, 0.1), Vector3(0.1, -0.1, 0), Vector3(-0.1, 0, 0.1), Vector3(0, 0.1, 0.1), Vector3(0.1, -0.1, 0), Vector3(-0.1, 0, 0.1), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:particle_alpha")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("eye:instance_shader_parameters/alpha")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_eejlw"]
resource_name = "pain"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("eye:instance_shader_parameters/alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 0.5, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("eye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.233333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.15), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("eye:instance_shader_parameters/color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2tf13"]
_data = {
"RESET": SubResource("Animation_npal8"),
"attack": SubResource("Animation_f880t"),
"die": SubResource("Animation_ne44q"),
"pain": SubResource("Animation_eejlw")
}

[node name="EnemyCloud" type="CharacterBody3D" node_paths=PackedStringArray("aim_point") groups=["enemies"]]
collision_layer = 132
collision_mask = 63
motion_mode = 1
script = ExtResource("1_suw4d")
thunder_sound = ExtResource("2_3y5jy")
charging_sound = ExtResource("3_8b5tv")
death_sound = ExtResource("4_1kjau")
pain_sound = ExtResource("5_l7gh6")
base_damage = 50
move_speed = 10.0
attack_range = 3.0
attack_cooldown = 1.0
knockback_modifier = 5.0
aim_point = NodePath("AimPoint")

[node name="AimPoint" type="Marker3D" parent="."]

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0798005, 0)
amount = 24
lifetime = 15.0
preprocess = 15.0
explosiveness = 0.5
randomness = 0.5
local_coords = true
process_material = SubResource("ParticleProcessMaterial_650k0")
draw_pass_1 = SubResource("QuadMesh_y807p")

[node name="eye" type="MeshInstance3D" parent="."]
material_overlay = ExtResource("3_uo1hx")
cast_shadow = 0
instance_shader_parameters/alpha = 0.0
instance_shader_parameters/color = Vector3(2, 0, 0)
mesh = SubResource("ArrayMesh_eqfvy")
skeleton = NodePath("")
surface_material_override/0 = ExtResource("4_tgjtr")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_atoy3")

[node name="Lightning" type="Node3D" parent="."]
visible = false

[node name="LightningSprite" type="Sprite3D" parent="Lightning"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.804565, 0)
pixel_size = 0.025
texture_filter = 0
texture = ExtResource("2_clo1p")

[node name="RayCast3D" type="RayCast3D" parent="."]
enabled = false
target_position = Vector3(0, 0, -50)
collision_mask = 371
hit_from_inside = true
collide_with_areas = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2tf13")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="LightningTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="StateMachine" parent="." node_paths=PackedStringArray("initial_state") instance=ExtResource("5_tqel5")]
initial_state = NodePath("Chase")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_x687j")

[node name="Chase" type="Node" parent="StateMachine"]
script = ExtResource("7_05cja")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("8_fqofo")

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource("8_nmhom")

[node name="Pain" type="Node" parent="StateMachine"]
script = ExtResource("8_jd6px")

[connection signal="timeout" from="LightningTimer" to="." method="_on_lightning_timer_timeout"]
